--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "be_brave_new",
   "version": "0.1.0",
+  "homepage": "./",
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
